sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:15: error: not found: value fin
	fin -=1
        ^AlgCocktailSort2:16: error: not found: value fin
	for (i<-fin to debut by -1){
                ^AlgCocktailSort2:22: error: not found: value debut
	debut +=1
        ^