sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
var start = 0
var end = getNombreValeurs() -2
var inverse=false

do {
	inverse = false
	for (i<-start to end){
		if(plusPetit(i+1,i)){
			echange(i+1,i)
			inverse = true
		}
	}
	fin -=1
	for (i<-fin to debut by -1){
		if(plusPetit(i+1,i)){
			echange(i,i+1)
			inverse = true
		}
	}
	debut +=1
} while (inverse)
}
